--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header class="head-nav">
-      <div class="container-nav container">
-        <nav class="container-nav-nav">
+    <header class="header">
+      <div class="container-header container">
+        <nav class="navigation">
           <a class="logo" href="./index.html"
             >Web<span class="logo-studio">Studio</span></a
           >
-          <ul class="container-nav-menu">
+          <ul class="nav-list">
             <li><a href="./index.html" class="nav nav-studio">Studio</a></li>
             <li><a href="" class="nav">Portfolio</a></li>
             <li><a href="" class="nav">Contacts</a></li>
           </ul>
         </nav>
-        <address>
-          <ul class="address">
+        <address class="address">
+          <ul class="address-list">
             <li>
               <a
                 class="address-info"
@@ -49,6 +49,79 @@
             </li>
           </ul>
         </address>
+        <button type="button" class="menu-open-btn">
+          <svg width="24" height="24" class="icon-menu">
+            <use href="./images/icons.svg#icon-menu"></use>
+          </svg>
+        </button>
+      </div>
+      <div class="mob-menu ">
+        <div>
+          <button type="button" class="menu-close-btn">
+            <svg width="8" height="8">
+              <use href="./images/icons.svg#icon-close-black"></use>
+            </svg>
+          </button>
+          <nav>
+            <ul class="mob-nav-menu">
+              <li class="">
+                <a href="./index.html" class="mob-nav-studio mob-nav">Studio</a>
+              </li>
+              <li class=""><a href="" class="mob-nav">Portfolio</a></li>
+              <li class=""><a href=""class="mob-nav">Contacts</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="mob-address-div">
+          <ul class="mob-address">
+            <li class="mob-address-li">
+              <a
+                class="mob-address-info"
+                href="mailto:info@devstudio.com"
+                target="_blank"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li class="mob-address-li">
+              <a
+                class=s-info"
+                href="tel:+110001111111"
+                target="_blank"
+                >+11 (000) 111-11-11</a
+              >
+            </li>
+          </ul>
+          <ul class="social-footer mob-menu-social">
+            <li class="icon-social">
+              <a href="" class="icon-social-link-footer">
+                <svg class="icon-social-link-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram-2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-social">
+              <a href="" class="icon-social-link-footer">
+                <svg class="icon-social-link-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-social">
+              <a href="" class="icon-social-link-footer">
+                <svg class="icon-social-link-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook-1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="icon-social">
+              <a href="" class="icon-social-link-footer">
+                <svg class="icon-social-link-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin-1"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </header>
     <main>
@@ -124,7 +197,8 @@
           <ul class="list-team">
             <li class="section-card">
               <img
-                src="./images/img.jpg"
+                srcset="./images/img1.jpg 1x, ./images/img1-2x.jpg 2x"
+                src="./images/img1.jpg"
                 alt="photo Mark Guerrero"
                 width="264"
                 height="260"
@@ -166,7 +240,8 @@
             </li>
             <li class="section-card">
               <img
-                src="./images/img(1).jpg"
+                srcset="./images/img2.jpg 1x, ./images/img2-2x.jpg 2x"
+                src="./images/img2.jpg"
                 alt="photo Tom Ford"
                 width="264"
                 height="260"
@@ -208,7 +283,8 @@
             </li>
             <li class="section-card">
               <img
-                src="./images/img(2).jpg"
+                srcset="./images/img3.jpg 1x, ./images/img3-2x.jpg 2x"
+                src="./images/img3.jpg"
                 alt="photo Camila Garcia"
                 width="264"
                 height="260"
@@ -250,7 +326,8 @@
             </li>
             <li class="section-card">
               <img
-                src="./images/img(3).jpg"
+                srcset="./images/img4.jpg 1x, ./images/img4-2x.jpg 2x"
+                src="./images/img4.jpg"
                 alt="photo Daniel Wilson"
                 width="264"
                 height="260"
@@ -300,12 +377,32 @@
           <ul class="list-portfolio">
             <li class="list-portfolio-item">
               <div class="list-portfolio-item-img">
-                <img
-                  src="./images/bankingapp.jpg"
-                  alt="banking app"
-                  width="360"
-                  height="300"
-                />
+                <picture
+                  ><source
+                    srcset="
+                      ./images/img-product-1.jpg    1x,
+                      ./images/img-product-1-2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)" />
+                  <source
+                    srcset="
+                      ./images/img-product-1-tab.jpg    1x,
+                      ./images/img-product-1-tab-2x.jpg 2x
+                    "
+                    media="(min-width: 768px)" />
+                  <source
+                    srcset="
+                      ./images/img-product-1-mob.jpg    1x,
+                      ./images/img-product-1-mob-2x.jpg 2x
+                    "
+                    media="(min-width: 320px)" />
+                  <img
+                    src="./images/bankingapp.jpg"
+                    alt="banking app"
+                    width="360"
+                    height="300"
+                /></picture>
+
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -319,12 +416,32 @@
             </li>
             <li class="list-portfolio-item">
               <div class="list-portfolio-item-img">
-                <img
-                  src="./images/cashlesspayment.jpg"
-                  alt="cashless payment"
-                  width="360"
-                  height="300"
-                />
+                <picture
+                  ><source
+                    srcset="
+                      ./images/img-product-2.jpg    1x,
+                      ./images/img-product-2-2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)" />
+                  <source
+                    srcset="
+                      ./images/img-product-2-tab.jpg    1x,
+                      ./images/img-product-2-tab-2x.jpg 2x
+                    "
+                    media="(min-width: 768px)" />
+                  <source
+                    srcset="
+                      ./images/img-product-2-mob.jpg    1x,
+                      ./images/img-product-2-mob-2x.jpg 2x
+                    "
+                    media="(min-width: 320px)" />
+                  <img
+                    src="./images/cashlesspayment.jpg"
+                    alt="cashless payment"
+                    width="360"
+                    height="300"
+                /></picture>
+
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -338,12 +455,32 @@
             </li>
             <li class="list-portfolio-item">
               <div class="list-portfolio-item-img">
-                <img
-                  src="./images/meditationapp.jpg"
-                  alt="meditation app"
-                  width="360"
-                  height="300"
-                />
+                <picture
+                  ><source
+                    srcset="
+                      ./images/img-product-3.jpg    1x,
+                      ./images/img-product-3-2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)" />
+                  <source
+                    srcset="
+                      ./images/img-product-3-tab.jpg    1x,
+                      ./images/img-product-3-tab-2x.jpg 2x
+                    "
+                    media="(min-width: 768px)" />
+                  <source
+                    srcset="
+                      ./images/img-product-3-mob.jpg    1x,
+                      ./images/img-product-3-mob-2x.jpg 2x
+                    "
+                    media="(min-width: 320px)" />
+                  <img
+                    src="./images/meditationapp.jpg"
+                    alt="meditation app"
+                    width="360"
+                    height="300"
+                /></picture>
+
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -357,12 +494,32 @@
             </li>
             <li class="list-portfolio-item">
               <div class="list-portfolio-item-img">
-                <img
-                  src="./images/taxiservice.jpg"
-                  alt="taxi service"
-                  width="360"
-                  height="300"
-                />
+                <picture
+                  ><source
+                    srcset="
+                      ./images/img-product-4.jpg    1x,
+                      ./images/img-product-4-2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)" />
+                  <source
+                    srcset="
+                      ./images/img-product-4-tab.jpg    1x,
+                      ./images/img-product-4-tab-2x.jpg 2x
+                    "
+                    media="(min-width: 768px)" />
+                  <source
+                    srcset="
+                      ./images/img-product-4-mob.jpg    1x,
+                      ./images/img-product-4-mob-2x.jpg 2x
+                    "
+                    media="(min-width: 320px)" />
+                  <img
+                    src="./images/taxiservice.jpg"
+                    alt="taxi service"
+                    width="360"
+                    height="300"
+                /></picture>
+
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -376,12 +533,32 @@
             </li>
             <li class="list-portfolio-item">
               <div class="list-portfolio-item-img">
-                <img
-                  src="./images/screenillustrations.jpg"
-                  alt="screen illustrations"
-                  width="360"
-                  height="300"
-                />
+                <picture
+                  ><source
+                    srcset="
+                      ./images/img-product-5.jpg    1x,
+                      ./images/img-product-5-2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)" />
+                  <source
+                    srcset="
+                      ./images/img-product-5-tab.jpg    1x,
+                      ./images/img-product-5-tab-2x.jpg 2x
+                    "
+                    media="(min-width: 768px)" />
+                  <source
+                    srcset="
+                      ./images/img-product-5-mob.jpg    1x,
+                      ./images/img-product-5-mob-2x.jpg 2x
+                    "
+                    media="(min-width: 320px)" />
+                  <img
+                    src="./images/screenillustrations.jpg"
+                    alt="screen illustrations"
+                    width="360"
+                    height="300"
+                /></picture>
+
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -395,12 +572,31 @@
             </li>
             <li class="list-portfolio-item">
               <div class="list-portfolio-item-img">
-                <img
-                  src="./images/onlinecourses.jpg"
-                  alt="online courses"
-                  width="360"
-                  height="300"
-                />
+                <picture
+                  ><source
+                    srcset="
+                      ./images/img-product-6.jpg    1x,
+                      ./images/img-product-6-2x.jpg 2x
+                    "
+                    media="(min-width: 1158px)" />
+                  <source
+                    srcset="
+                      ./images/img-product-6-tab.jpg    1x,
+                      ./images/img-product-6-tab-2x.jpg 2x
+                    "
+                    media="(min-width: 768px)" />
+                  <source
+                    srcset="
+                      ./images/img-product-6-mob.jpg    1x,
+                      ./images/img-product-6-mob-2x.jpg 2x
+                    "
+                    media="(min-width: 320px)" />
+                  <img
+                    src="./images/onlinecourses.jpg"
+                    alt="online courses"
+                    width="360"
+                    height="300"
+                /></picture>
                 <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
@@ -418,50 +614,52 @@
       </section>
     </main>
 
-    <footer class="footer">
+    <footer class="footer ">
       <div class="container footer-container">
-        <div class="footer-logo-p">
-          <a class="logo-footer" href="./index.html"
-            >Web<span class="logo-studio-footer">Studio</span></a
-          >
-          <p class="text-footer">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
+        <div class="footer-div-logo-and-social">
+          <div class="footer-logo-p">
+            <a class="logo-footer" href="./index.html"
+              >Web<span class="logo-studio-footer">Studio</span></a
+            >
+            <p class="text-footer">
+              Increase the flow of customers and sales for your business with
+              digital marketing & growth solutions.
+            </p>
+          </div>
 
-        <div>
-          <p class="footer-social-text">Social media</p>
-          <ul class="social-footer">
-            <li class="icon-social">
-              <a href="" class="icon-social-link-footer">
-                <svg class="icon-social-link-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-instagram-2"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="icon-social">
-              <a href="" class="icon-social-link-footer">
-                <svg class="icon-social-link-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-twitter-1"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="icon-social">
-              <a href="" class="icon-social-link-footer">
-                <svg class="icon-social-link-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-facebook-1"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="icon-social">
-              <a href="" class="icon-social-link-footer">
-                <svg class="icon-social-link-icon" width="24" height="24">
-                  <use href="./images/icons.svg#icon-linkedin-1"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+          <div class="footer-social-div">
+            <p class="footer-social-text">Social media</p>
+            <ul class="social-footer">
+              <li class="icon-social">
+                <a href="" class="icon-social-link-footer">
+                  <svg class="icon-social-link-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="icon-social">
+                <a href="" class="icon-social-link-footer">
+                  <svg class="icon-social-link-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="icon-social">
+                <a href="" class="icon-social-link-footer">
+                  <svg class="icon-social-link-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="icon-social">
+                <a href="" class="icon-social-link-footer">
+                  <svg class="icon-social-link-icon" width="24" height="24">
+                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
 
         <div class="email-footer-div">
